--- a/src/main/resources/assets/betternether/lang/pt_br.json
+++ b/src/main/resources/assets/betternether/lang/pt_br.json
@@ -63,27 +63,27 @@
 	
 	"block.betternether.chest_of_drawers": "Gaveteiro",
 
-	"block.betternether.cincinnasite_bars": "Cincinnasite Bars",
-	"block.betternether.cincinnasite_block": "Cincinnasite Block",
+	"block.betternether.cincinnasite_bars": "Grades de cincinnasita",
+	"block.betternether.cincinnasite_block": "Bloco de cincinnasita",
 	"block.betternether.cincinnasite_brick_plate": "Cincinnasite Brick Plate",
 	"block.betternether.cincinnasite_bricks": "Cincinnasite Bricks",
 	"block.betternether.cincinnasite_bricks_pillar": "Cincinnasite Brick Pillar",
-	"block.betternether.cincinnasite_button": "Cincinnasite Button",
-	"block.betternether.cincinnasite_carved": "Carved Cincinnasite",
-	"block.betternether.cincinnasite_forge": "Cincinnasite Forge",
-	"block.betternether.cincinnasite_forged": "Forged Cincinnasite Block",
-	"block.betternether.cincinnasite_frame": "Cincinnasite Frame",
-	"block.betternether.cincinnasite_lantern": "Cincinnasite Lantern",
-	"block.betternether.cincinnasite_ore": "Cincinnasite Ore",
-	"block.betternether.cincinnasite_pedestal": "Cincinnasite Pedestal",
-	"block.betternether.cincinnasite_pillar": "Cincinnasite Pillar",
+	"block.betternether.cincinnasite_button": "Botão de cincinnasita",
+	"block.betternether.cincinnasite_carved": "Cincinnasita talhada",
+	"block.betternether.cincinnasite_forge": "Forja de cincinnasita",
+	"block.betternether.cincinnasite_forged": "Bloco de cincinnasita",
+	"block.betternether.cincinnasite_frame": "Emoldurado de cincinnasita",
+	"block.betternether.cincinnasite_lantern": "Lanterna de cincinnasita",
+	"block.betternether.cincinnasite_ore": "Minério de cincinnasita",
+	"block.betternether.cincinnasite_pedestal": "Pedestal de cincinnasita",
+	"block.betternether.cincinnasite_pillar": "Pilar de cincinnasita",
 	"block.betternether.cincinnasite_plate": "Cincinnasite Plate",
 	"block.betternether.cincinnasite_pot": "Cincinnasite Pot",
-	"block.betternether.cincinnasite_slab": "Cincinnasite Slab",
-	"block.betternether.cincinnasite_stairs": "Cincinnasite Stairs",
-	"block.betternether.cincinnasite_tile_large": "Large Cincinnasite Tile",
-	"block.betternether.cincinnasite_tile_small": "Small Cincinnasite Tile",
-	"block.betternether.cincinnasite_wall": "Cincinnasite Wall",
+	"block.betternether.cincinnasite_slab": "Laje de cincinnasita",
+	"block.betternether.cincinnasite_stairs": "Escadas de cincinnasita",
+	"block.betternether.cincinnasite_tile_large": "Cincinnasita cinzelada",
+	"block.betternether.cincinnasite_tile_small": "Ladrilhos de cincinnasita",
+	"block.betternether.cincinnasite_wall": "Muro de cincinnasita",
 
 	"block.betternether.egg_plant": "Egg Plant",*
 
@@ -100,11 +100,11 @@
 
 	"block.betternether.magma_flower": "Semente de flor-de-magma",
 
-	"block.betternether.nether_brick_tile_large": "Bloco de tijolo do Nether",
+	"block.betternether.nether_brick_tile_large": "Bloco de tijolo do Nether cinzelado",
 	"block.betternether.nether_brick_tile_slab": "Laje de ladrilhos do Nether",
 	"block.betternether.nether_brick_tile_small": "Ladrilhos do Nether",
 	"block.betternether.nether_brick_tile_stairs": "Escadas de ladrilhos do Nether",
-	"block.betternether.nether_brick_wall": "Muro de blocos de tijolo do Nether",
+	"block.betternether.nether_brick_wall": "Muro de tijolo do Nether cinzelado",
 	"block.betternether.nether_cactus": "Cacto do Nether",
 	"block.betternether.nether_grass": "Grama do Nether",
 	"block.betternether.nether_mycelium": "Micélio do Nether",
@@ -172,22 +172,22 @@
 
 	"block.betternether.smoker": "Fumarola",
 
-	"block.betternether.stalagnate": "Stalagnate",
-	"block.betternether.stalagnate_stem": "Stalagnate Stem",
-	"block.betternether.stalagnate_log": "Stalagnate Log",
-	"block.betternether.stalagnate_bark": "Stalagnate Wood",
-	"block.betternether.stalagnate_bowl_placed": "Stalagnate Bowl",
-	"block.betternether.stalagnate_planks": "Stalagnate Planks",
-	"block.betternether.stalagnate_button": "Stalagnate Button",
-	"block.betternether.stalagnate_fence": "Stalagnate Fence",
-	"block.betternether.stalagnate_gate": "Stalagnate Gate",
-	"block.betternether.stalagnate_plate": "Stalagnate Pressure Plate",
-	"block.betternether.stalagnate_slab": "Stalagnate Slab",
-	"block.betternether.stalagnate_stairs": "Stalagnate Stairs",
-	"block.betternether.stalagnate_door": "Stalagnate Door",
-	"block.betternether.stalagnate_trapdoor": "Stalagnate Trapdoor",
-	"block.betternether.stalagnate_seed": "Stalagnate Seed",
-	"block.betternether.wart_seed": "Primórdia de fungo do Nether",
+	"block.betternether.stalagnate": "Estalagnato",
+	"block.betternether.stalagnate_stem": "Talo de estalagnato",
+	"block.betternether.stalagnate_log": "Tora de estalagnato",
+	"block.betternether.stalagnate_bark": "Madeira de estalagnato",
+	"block.betternether.stalagnate_bowl_placed": "Tijela de estalagnato",
+	"block.betternether.stalagnate_planks": "Tábuas de estalagnato",
+	"block.betternether.stalagnate_button": "Botão de estalagnato",
+	"block.betternether.stalagnate_fence": "Cerca de estalagnato",
+	"block.betternether.stalagnate_gate": "Portão de estalagnato",
+	"block.betternether.stalagnate_plate": "Placa de pressão de estalagnato",
+	"block.betternether.stalagnate_slab": "Laje de estalagnato",
+	"block.betternether.stalagnate_stairs": "Escadas de estalagnato",
+	"block.betternether.stalagnate_door": "Porta de estalagnato",
+	"block.betternether.stalagnate_trapdoor": "Alçapão de estalagnato",
+	"block.betternether.stalagnate_seed": "Muda de estalagnato",
+	"block.betternether.wart_seed": "Muda de fungo do Nether",
 	
 	"block.betternether.eye_vine": "Trepadeira de globo ocular",
 	"block.betternether.black_apple": "Arbusto de maçã negra",
@@ -203,7 +203,7 @@
 	"block.betternether.willow_bark": "Madeira de infra-salgueiro",
 	"block.betternether.willow_sapling": "Muda de infra-salgueiro",
 	
-	"block.betternether.swamp_grass": "Grama do pântano do Nether",
+	"block.betternether.swamp_grass": "Erva do pântano do Nether",
 	
 	"block.betternether.willow_planks": "Tábuas de infra-salgueiro",
 	"block.betternether.willow_stairs": "Escadas de infra-salgueiro",
@@ -232,18 +232,18 @@
 	"block.betternether.golden_vine": "Trepadeira dourada",
 	"block.betternether.geyser": "Gêiser",
 	
-	"item.betternether.cincinnasite_shovel": "Cincinnasite Shovel",
+	"item.betternether.cincinnasite_shovel": "Pá de cincinnasita",
 	"item.betternether.cincinnasite_shovel_diamond": "Cincinnasite-Diamond Shovel",
 	
-	"item.betternether.cincinnasite_helmet": "Cincinnasite Helmet",
-	"item.betternether.cincinnasite_chestplate": "Cincinnasite Chestplate",
-	"item.betternether.cincinnasite_leggings": "Cincinnasite Leggings",
-	"item.betternether.cincinnasite_boots": "Cincinnasite Boots",
-	"item.betternether.cincinnasite_sword": "Cincinnasite Sword",
+	"item.betternether.cincinnasite_helmet": "Capacete de cincinnasita",
+	"item.betternether.cincinnasite_chestplate": "Peitoral de cincinnasita",
+	"item.betternether.cincinnasite_leggings": "Calças de cincinnasita",
+	"item.betternether.cincinnasite_boots": "Botas de cincinnasita",
+	"item.betternether.cincinnasite_sword": "Espada de cincinnasita",
 	"item.betternether.cincinnasite_sword_diamond": "Cincinnasite-Diamond Sword",
 	
 	"item.betternether.spawn_egg_firefly": "Ovo gerador de vagalume",
-	"item.betternether.cincinnasite_ingot": "Cincinnasite Ingot",
+	"item.betternether.cincinnasite_ingot": "Barra de cincinnasita",
 	
 	"block.betternether.mushroom_stem": "Talo de cogumelo",
 	"block.betternether.mushroom_planks": "Tábuas de cogumelo",
@@ -256,7 +256,7 @@
 	"block.betternether.mushroom_trapdoor": "Alçapão de cogumelo",
 	"block.betternether.mushroom_door": "Porta de cogumelo",
 	
-	"block.betternether.cincinnasite_lantern_small": "Small Cincinnasite Lantern",
+	"block.betternether.cincinnasite_lantern_small": "Lampião de cincinnasita",
 	
 	"block.betternether.quartz_glass_pane_white": "White Quartz Pane",
 	"block.betternether.quartz_glass_pane_orange": "Orange Quartz Pane",
@@ -307,16 +307,16 @@
 	"block.betternether.roof_tile_reeds": "Telhas de junco do Nether",
 	"block.betternether.roof_tile_reeds_stairs": "Escadas de telhas de junco do Nether",
 	"block.betternether.roof_tile_reeds_slab": "Laje de telhas de junco do Nether",
-	"block.betternether.stalagnate_roof": "Stalagnate Roof Tile",
-	"block.betternether.stalagnate_roof_stairs": "Stalagnate Roof Tile Stairs",
-	"block.betternether.stalagnate_roof_slab": "Stalagnate Roof Tile Slab",
+	"block.betternether.stalagnate_roof": "Telhas de estalagnato",
+	"block.betternether.stalagnate_roof_stairs": "Escadas de telhas de estalagnato",
+	"block.betternether.stalagnate_roof_slab": "Laje de telhas de estalagnato",
 	"block.betternether.roof_tile_nether_bricks": "Telhas do Nether",
 	"block.betternether.roof_tile_nether_bricks_stairs": "Escadas de telhas do Nether",
 	"block.betternether.roof_tile_nether_bricks_slab": "Laje de telhas do Nether",
-	"block.betternether.roof_tile_cincinnasite": "Cincinnasite Roof Tile",
-	"block.betternether.roof_tile_cincinnasite_stairs": "Cincinnasite Roof Tile Stairs",
-	"block.betternether.roof_tile_cincinnasite_slab": "Cincinnasite Roof Tile Slab",
-	"block.betternether.willow_roof": "Telhas de  infra-salgueiro",
+	"block.betternether.roof_tile_cincinnasite": "Telhas de cincinnasita",
+	"block.betternether.roof_tile_cincinnasite_stairs": "Escadas de telhas de cincinnasita",
+	"block.betternether.roof_tile_cincinnasite_slab": "Laje de telhas de cincinnasita",
+	"block.betternether.willow_roof": "Telhas de infra-salgueiro",
 	"block.betternether.willow_roof_stairs": "Escadas de telhas de infra-salgueiro",
 	"block.betternether.willow_roof_slab": "Laje de telhas de infra-salgueiro",
 	"block.betternether.roof_tile_wart": "Telhas de fungo do Nether",
@@ -324,26 +324,26 @@
 	"block.betternether.roof_tile_wart_slab": "Laje de telhas de fungo do Nether",
 	
 	"block.betternether.taburet_reeds": "Banco de junco do Nether",
-	"block.betternether.stalagnate_taburet": "Stalagnate Stool",
+	"block.betternether.stalagnate_taburet": "Banco de estalagnato",
 	"block.betternether.willow_taburet": "Banco de infra-salgueiro",
 	"block.betternether.taburet_wart": "Banco de fungo do Nether",
-	"block.betternether.taburet_cincinnasite": "Cincinnasite Stool",
+	"block.betternether.taburet_cincinnasite": "Banco de cincinnasita",
 	
-	"block.betternether.stalagnate_ladder": "Stalagnate Ladder",
+	"block.betternether.stalagnate_ladder": "Escada de mão de estalagnato",
 	"block.betternether.willow_ladder": "Escada de mão de infra-salgueiro",
 	"block.betternether.wart_ladder": "Escada de mão de fungo do Nether",
 	
 	"block.betternether.chair_reeds": "Cadeira de fungo do Nether",
-	"block.betternether.stalagnate_chair": "Stalagnate Chair",
+	"block.betternether.stalagnate_chair": "Cadeira de estalagnato",
 	"block.betternether.willow_chair": "Cadeira de infra-salgueiro",
 	"block.betternether.chair_wart": "Cadeira de fungo do Nether",
-	"block.betternether.chair_cincinnasite": "Cincinnasite Chair",
+	"block.betternether.chair_cincinnasite": "Cadeira de cincinnasita",
 	
-	"block.betternether.stalagnate_stripped_log": "Stripped Stalagnate Log",
+	"block.betternether.stalagnate_stripped_log": "Tora de estalagnato",
 	"block.betternether.willow_stripped_log": "Tronco de infra-salgueiro descascado",
 	"block.betternether.striped_log_wart": "Caule de fungo do Nether descascado",
 	
-	"block.betternether.stalagnate_stripped_bark": "Stripped Stalagnate Wood",
+	"block.betternether.stalagnate_stripped_bark": "Madeira de estalagnato",
 	"block.betternether.willow_stripped_bark": "Madeira de infra-salgueiro descascada",
 	"block.betternether.striped_bark_wart": "Hifas de fungo do Nether descascadas",
 	
@@ -351,15 +351,15 @@
 	"block.betternether.giant_mold_sapling": "Muda de mofo gigante",
 	
 	"block.betternether.bar_stool_reeds": "Banqueta de junco do Nether",
-	"block.betternether.stalagnate_bar_stool": "Stalagnate Bar Stool",
+	"block.betternether.stalagnate_bar_stool": "Banqueta de estalagnato",
 	"block.betternether.willow_bar_stool": "Banqueta de infra-salgueiro",
 	"block.betternether.bar_stool_wart": "Banqueta de fungo do Nether",
-	"block.betternether.bar_stool_cincinnasite": "Cincinnasite Bar Stool",
+	"block.betternether.bar_stool_cincinnasite": "Banqueta de cincinnasita",
 	
 	"biome.betternether.gravel_desert": "Deserto de cascalho",
 	"biome.betternether.nether_jungle": "Selva do Nether",
 	"biome.betternether.wart_forest": "Floresta de fungos do Nether",
-	"biome.betternether.nether_grasslands": "Nether Grasslands",
+	"biome.betternether.nether_grasslands": "Prados do Nether",
 	"biome.betternether.nether_mushroom_forest": "Floresta de cogumelos do Nether",
 	"biome.betternether.nether_mushroom_forest_edge": "Margem da floresta de cogumelos do Nether",
 	"biome.betternether.wart_forest_edge": "Margem da floresta de fungos do Nether",
@@ -440,7 +440,7 @@
 	"block.betternether.chair_dark_oak": "Cadeira de carvalho escuro",
 	"block.betternether.bar_stool_dark_oak": "Banqueta de carvalho escuro",
 	
-	"item.betternether.cincinnasite_hammer": "Cincinnasite Hammer",
+	"item.betternether.cincinnasite_hammer": "Martelo de cincinnasita",
 	"item.betternether.cincinnasite_hammer_diamond": "Cincinnasite-Diamond Hammer",
 	
 	"block.betternether.nether_brewing_stand": "Suporte de poções do Nether",
@@ -471,8 +471,8 @@
 	"block.betternether.rubeus_bar_stool": "Rubeus Bar Stool",
 	"block.betternether.rubeus_ladder": "Rubeus Ladder",
 	
-	"item.betternether.cincinnasite_shears": "Cincinnasite Shears",
-	"block.betternether.cincinnasite_anvil": "Cincinnasite Anvil",
+	"item.betternether.cincinnasite_shears": "Tesoura de cincinnasita",
+	"block.betternether.cincinnasite_anvil": "Bigorna de cincinnasita",
 	
 	"block.betternether.jungle_grass": "Grama da selva do Nether",
 	"block.betternether.jungle_plant": "Planta da selva do Nether",
@@ -517,7 +517,7 @@
 	"block.betternether.basalt_bricks_slab": "Laje de tijolos de basalto",
 	"block.betternether.basalt_bricks_wall": "Muro de tijolos de basalto",
 	
-	"item.betternether.cincinnasite_hoe": "Cincinnasite Hoe",
+	"item.betternether.cincinnasite_hoe": "Enchada de cincinnasita",
 	"item.betternether.cincinnasite_hoe_diamond": "Cincinnasite-Diamond Hoe",
 	"item.betternether.nether_ruby_hoe": "Enchada de rubi do Nether",
 	"item.betternether.nether_ruby_hammer": "Martelo de rubi do Nether",
@@ -551,7 +551,7 @@
 	"block.betternether.crafting_table_mushroom": "Bancada de cogumelo",
 	"block.betternether.crafting_table_mushroom_fir": "Bancada de cogumelo-abeto",
 	
-	"block.betternether.stalagnate_chest": "Stalagnate Chest",
+	"block.betternether.stalagnate_chest": "Baú de estalagnato",
 	"block.betternether.chest_reed": "Baú de junco do Nether",
 	"block.betternether.willow_chest": "Baú de infra-salgueiro",
 	"block.betternether.chest_wart": "Baú de fungo do Nether",
@@ -566,7 +566,7 @@
 	
 	"block.betternether.feather_fern": "Feather Fern",
 	
-	"block.betternether.stalagnate_sign": "Stalagnate Sign",
+	"block.betternether.stalagnate_sign": "Placa de estalagnato",
 	"block.betternether.sign_reed": "Placa de junco do Nether",
 	"block.betternether.willow_sign": "Placa de infra-salgueiro",
 	"block.betternether.sign_wart": "Placa de fungo do Nether",
@@ -574,7 +574,7 @@
 	"block.betternether.sign_mushroom": "Placa de cogumelo",
 	"block.betternether.sign_mushroom_fir": "Placa de cogumelo-abeto",
 	
-	"block.betternether.stalagnate_barrel": "Stalagnate Barrel",
+	"block.betternether.stalagnate_barrel": "Barril de estalagnato",
 	"block.betternether.barrel_reed": "Barril de junco do Nether",
 	"block.betternether.willow_barrel": "Barril de infra-salgueiro",
 	"block.betternether.barrel_wart": "Barril de fungo do Nether",
@@ -609,7 +609,7 @@
 	"block.betternether.jellyfish_mushroom": "Cogumelo-medusa",
 	"block.betternether.jellyfish_mushroom_sapling": "Muda de cogumelo-medusa",
 	"block.betternether.bone_stalactite": "Espeleotema de osso",
-	"block.betternether.cincinnasite_chain": "Cincinnasite Chain",
+	"block.betternether.cincinnasite_chain": "Corrente de cincinnasita",
 	"block.betternether.nether_lapis_ore": "Minério de lápis-lazúli do Nether",
 	"item.betternether.lapis_pile": "Pilha de lápis-lazúli",
 	"item.betternether.cincinnasite_excavator": "Cincinnasite Excavator",
@@ -617,7 +617,7 @@
 	"item.betternether.nether_ruby_excavator": "Ruby Excavator",
 	
 	"block.betternether.sepia_mushroom_grass": "Cogugrama sulfúrica",
-	"block.betternether.sepia_bone_grass": "Grama de osso sulfúrica",
+	"block.betternether.sepia_bone_grass": "Grama óssea sulfúrica",
 	"block.betternether.golden_lumabus_seed": "Semente de lumábus-dourado",
 	"block.betternether.golden_lumabus_vine": "Trepadeira de lumábus-dourado",
 	
@@ -673,26 +673,26 @@
 	"block.betternether.nether_sakura_stairs": "Escadas de sakura do Nether",
 	"block.betternether.nether_sakura_trapdoor": "Alçapão de sakura do Nether",
 	"block.betternether.barrel_nether_sakura": "Barril de sakura do Nether",
-	"block.betternether.bar_stool_nether_sakura": "Nether Sakura Bar Stool",
-	"block.betternether.chair_nether_sakura": "Nether Sakura Chair",
-	"block.betternether.chest_nether_sakura": "Nether Sakura Chest",
+	"block.betternether.bar_stool_nether_sakura": "Banqueta de sakura do Nether",
+	"block.betternether.chair_nether_sakura": "Cadeira de sakura do Nether",
+	"block.betternether.chest_nether_sakura": "Baú de sakura do Nether",
 	"block.betternether.crafting_table_nether_sakura": "Bancada de sakura do Nether",
 	"block.betternether.sign_nether_sakura": "Placa de sakura do Nether",
 	"block.betternether.striped_bark_nether_sakura": "Madeira de sakura do Nether descascada",
 	"block.betternether.striped_log_nether_sakura": "Tronco de sakura do Nether descascado",
-	"block.betternether.taburet_nether_sakura": "Nether Sakura Stool",
+	"block.betternether.taburet_nether_sakura": "Banco de sakura do Nether",
 	
 	"block.betternether.nether_sakura_leaves": "Folhas de sakura do Nether",
 	"block.betternether.nether_sakura_sapling": "Muda de sakura do Nether",
 	
-	"block.betternether.ceiling_mushrooms": "Cogumelos de teto",
+	"block.betternether.ceiling_mushrooms": "Cogugrama invertida",
 	"block.betternether.neon_equisetum": "Neon Equisetum",
 	"block.betternether.hook_mushroom": "Hook Mushroom",
 	"item.betternether.hook_mushroom_cooked": "Cooked Hook Mushroom",
 	
-	"block.betternether.whispering_gourd_vine": "Whispering Gourd Seeds",
-	"block.betternether.whispering_gourd": "Whispering Gourd",
-	"block.betternether.whispering_gourd_lantern": "Whispering Gourd Lantern",
+	"block.betternether.whispering_gourd_vine": "Sementes de cabaça-sussurrante",
+	"block.betternether.whispering_gourd": "Cabaça-sussurrante",
+	"block.betternether.whispering_gourd_lantern": "Cabaça-sussurrante de Halloween",
 	
 	"block.betternether.willow_torch": "Luminóforo de infra-salgueiro"
 }
