--- a/src/main/resources/assets/betternether/lang/pt_br.json
+++ b/src/main/resources/assets/betternether/lang/pt_br.json
@@ -14,9 +14,9 @@
 	"entity.betternether.skull": "Crânio",
 	"item.betternether.spawn_egg_skull": "Ovo gerador de crânio",
 
-	"item.betternether.black_apple": "Maçã negra",
+	"item.betternether.black_apple": "Maçã-negra",
 
-	"item.betternether.cincinnasite": "Cincinnasita",
+	"item.betternether.cincinnasite": "Cincinnasita bruta",
 	"item.betternether.cincinnasite_axe": "Machado de cincinnasita",
 	"item.betternether.cincinnasite_axe_diamond": "Cincinnasite-Diamond Axe",
 	"item.betternether.cincinnasite_pickaxe": "Picareta de cincinnasita",
@@ -24,14 +24,14 @@
 
 	"block.betternether.stalagnate_bowl": "Tijela de estalagnato",
 	"item.betternether.stalagnate_bowl": "Tijela de estalagnato",
-	"item.betternether.stalagnate_bowl_apple": "Tijela com maçã negra",
+	"item.betternether.stalagnate_bowl_apple": "Tijela com maçã-negra",
 	"item.betternether.stalagnate_bowl_mushroom": "Tijela com ensopado de cogumelos",
 	"item.betternether.stalagnate_bowl_wart": "Tijela com sopa de fungo do Nether",
 
 	"itemGroup.betternether.items": "Better Nether",
 
-	"message.spawn_help": "§c§lYou must hold§r %s §c§lto set your spawn point here",
-	"message.spawn_set": "§2§lYour spawn point was set here",
+	"message.spawn_help": "§c§lVocê precisa segurar§r %s §c§lpara definir seu ponto de renascimento.",
+	"message.spawn_set": "§2§lSeu ponto de renascimento foi definido.",
 
 	"block.betternether.agave": "Semente de agave do Nether",
 	"item.betternether.agave_leaf": "Folha de agave do Nether",
@@ -40,34 +40,34 @@
 
 	"block.betternether.barrel_cactus": "Cacto-barril do Nether",
 
-	"block.betternether.black_apple_seed": "Semente de maçã negra",
-	"block.betternether.black_bush": "Arbusto negro",
+	"block.betternether.black_apple_seed": "Semente de maçã-negra",
+	"block.betternether.black_bush": "Arbusto-negro",
 	
 	"block.betternether.red_large_mushroom": "Cogumelo vermelho grande",
 	"block.betternether.brown_large_mushroom": "Cogumelo marrom grande",
-	"block.betternether.lucis_mushroom": "Cogumelo lucis",
+	"block.betternether.lucis_mushroom": "Cogumelo lúcis",
 
 	"block.betternether.eyeball": "Globo ocular",
 	"block.betternether.eyeball_small": "Globo ocular pequeno",
 
 	"block.betternether.bone_block": "Bloco ósseo",
 	"block.betternether.bone_button": "Botão ósseo",
-	"block.betternether.bone_cincinnasite_door": "Bone-Cincinnasite Door",*
+	"block.betternether.bone_cincinnasite_door": "Porta óssea de cincinnasita",
 	"block.betternether.bone_mushroom": "Esporos de cogumelo ósseo",
 	"block.betternether.bone_plate": "Placa de pressão óssea",
-	"block.betternether.bone_reed_door": "Bone-Reed Door",*
+	"block.betternether.bone_reed_door": "Porta óssea de junco do Nether",
 	"block.betternether.bone_slab": "Laje óssea",
 	"block.betternether.bone_stairs": "Escadas ósseas",
-	"block.betternether.bone_tile": "Bloco ósseo talhado",
+	"block.betternether.bone_tile": "Bloco ósseo cinzelado",
 	"block.betternether.bone_wall": "Muro ósseo",
 	
 	"block.betternether.chest_of_drawers": "Gaveteiro",
 
 	"block.betternether.cincinnasite_bars": "Grades de cincinnasita",
-	"block.betternether.cincinnasite_block": "Bloco de cincinnasita",
-	"block.betternether.cincinnasite_brick_plate": "Cincinnasite Brick Plate",
-	"block.betternether.cincinnasite_bricks": "Cincinnasite Bricks",
-	"block.betternether.cincinnasite_bricks_pillar": "Cincinnasite Brick Pillar",
+	"block.betternether.cincinnasite_block": "Bloco de cincinnasita bruta",
+	"block.betternether.cincinnasite_brick_plate": "Cincinnasite Brick Plate",*
+	"block.betternether.cincinnasite_bricks": "Tijolos de cincinnasita",
+	"block.betternether.cincinnasite_bricks_pillar": "Pilar de tijolos de cincinnasita",
 	"block.betternether.cincinnasite_button": "Botão de cincinnasita",
 	"block.betternether.cincinnasite_carved": "Cincinnasita talhada",
 	"block.betternether.cincinnasite_forge": "Forja de cincinnasita",
@@ -77,8 +77,8 @@
 	"block.betternether.cincinnasite_ore": "Minério de cincinnasita",
 	"block.betternether.cincinnasite_pedestal": "Pedestal de cincinnasita",
 	"block.betternether.cincinnasite_pillar": "Pilar de cincinnasita",
-	"block.betternether.cincinnasite_plate": "Cincinnasite Plate",
-	"block.betternether.cincinnasite_pot": "Cincinnasite Pot",
+	"block.betternether.cincinnasite_plate": "Placa de pressão de cincinnasita",
+	"block.betternether.cincinnasite_pot": "Vaso de cincinnasita",
 	"block.betternether.cincinnasite_slab": "Laje de cincinnasita",
 	"block.betternether.cincinnasite_stairs": "Escadas de cincinnasita",
 	"block.betternether.cincinnasite_tile_large": "Cincinnasita cinzelada",
@@ -96,7 +96,7 @@
 	"block.betternether.ink_bush": "Arbusto-tinta",
 	"block.betternether.ink_bush_seed": "Semente de arbusto-tinta",
 
-	"block.betternether.lucis_spore": "Esporo de lucis",
+	"block.betternether.lucis_spore": "Esporo de lúcis",
 
 	"block.betternether.magma_flower": "Semente de flor-de-magma",
 
@@ -116,14 +116,14 @@
 
 	"block.betternether.orange_mushroom": "Cogumelo laranja",
 
-	"block.betternether.pig_statue_respawner": "Respawner Statue",
+	"block.betternether.pig_statue_respawner": "Estátua de renascimento",
 
 	"block.betternether.potted_plant": "Planta envasada",
 
 	"block.betternether.quartz_glass": "Vidro de quartzo",
 	"block.betternether.quartz_glass_framed": "Vidro de quartzo emoldurado",
 	"block.betternether.quartz_glass_framed_pane": "Vidraça de quartzo emoldurada",
-	"block.betternether.quartz_glass_pane": "Vidraca de quartzo",
+	"block.betternether.quartz_glass_pane": "Vidraça de quartzo",
 	"block.betternether.quartz_glass_black": "Vidro de quartzo preta",
 	"block.betternether.quartz_glass_blue": "Vidro de quartzo azul",
 	"block.betternether.quartz_glass_brown": "Vidro de quartzo marrom",
@@ -190,15 +190,15 @@
 	"block.betternether.wart_seed": "Muda de fungo do Nether",
 	
 	"block.betternether.eye_vine": "Trepadeira de globo ocular",
-	"block.betternether.black_apple": "Arbusto de maçã negra",
+	"block.betternether.black_apple": "Arbusto de maçã-negra",
 
 	"commands.findnethercity.usage.console": "No coordinates in input",
-	"commands.findnethercity.usage.coordinates": "Wrong coordinates",
+	"commands.findnethercity.usage.coordinates": "Coordenadas erradas",
 	"commands.findnethercity.usage": "Wrong usage, must be /findNetherCity or /findNetherCity x y z",
 	
 	"block.betternether.willow_branch": "Galho de infra-salgueiro",
 	"block.betternether.willow_leaves": "Folhas de infra-salgueiro",
-	"block.betternether.willow_trunk": "Tora de infra-salgueiro",
+	"block.betternether.willow_trunk": "Lenho de infra-salgueiro",
 	"block.betternether.willow_log": "Tronco de infra-salgueiro",
 	"block.betternether.willow_bark": "Madeira de infra-salgueiro",
 	"block.betternether.willow_sapling": "Muda de infra-salgueiro",
@@ -535,8 +535,8 @@
 	"config.betternether.structures_density": "Densidade das estruturas",
 	"config.betternether.cities_dist": "Dist. entre as cidades do Nether [em chunks]",
 	
-	"config.betternether.reset": "Reset",
-	"config.betternether.fog": "Fog Distance",
+	"config.betternether.reset": "Resetar",
+	"config.betternether.fog": "Distância do nevoeiro",
 	"config.betternether.lavafalls": "§b*§rPartículas de cachoeiras de lava",
 	"config.betternether.armour": "§b*§rThin Armor",
 	
@@ -564,7 +564,7 @@
 	
 	"block.betternether.jungle_moss": "Musgo da selva do Nether",
 	
-	"block.betternether.feather_fern": "Feather Fern",
+	"block.betternether.feather_fern": "Samambaia-pena",*
 	
 	"block.betternether.stalagnate_sign": "Placa de estalagnato",
 	"block.betternether.sign_reed": "Placa de junco do Nether",
@@ -657,7 +657,7 @@
 	"block.betternether.anchor_tree_leaves": "Folhas de ancorácea",
 	"block.betternether.anchor_tree_sapling": "Muda de ancorácea",
 	
-	"block.betternether.giant_lucis": "Lucis gigante",
+	"block.betternether.giant_lucis": "Lúcis gigante",
 	"block.betternether.moss_cover": "Tapete de infra-musgo",
 	
 	"block.betternether.nether_sakura_bark": "Madeira de sakura do Nether",
@@ -685,7 +685,7 @@
 	"block.betternether.nether_sakura_leaves": "Folhas de sakura do Nether",
 	"block.betternether.nether_sakura_sapling": "Muda de sakura do Nether",
 	
-	"block.betternether.ceiling_mushrooms": "Cogugrama invertida",
+	"block.betternether.ceiling_mushrooms": "Cogugrama de teto",
 	"block.betternether.neon_equisetum": "Cavalinha néon",
 	"block.betternether.hook_mushroom": "Cogumelo-anzol",
 	"item.betternether.hook_mushroom_cooked": "Cogumelo-anzol assado",
