--- a/src/main/resources/assets/betternether/lang/pt_br.json
+++ b/src/main/resources/assets/betternether/lang/pt_br.json
@@ -18,9 +18,9 @@
 
 	"item.betternether.cincinnasite": "Cincinnasita bruta",
 	"item.betternether.cincinnasite_axe": "Machado de cincinnasita",
-	"item.betternether.cincinnasite_axe_diamond": "Machado de cincinnasita com diamante",
+	"item.betternether.cincinnasite_axe_diamond": "Machado de cincinnasita e diamante",
 	"item.betternether.cincinnasite_pickaxe": "Picareta de cincinnasita",
-	"item.betternether.cincinnasite_pickaxe_diamond": "Picareta de cincinnasita com diamante",
+	"item.betternether.cincinnasite_pickaxe_diamond": "Picareta de cincinnasita e diamante",
 
 	"block.betternether.stalagnate_bowl": "Tijela de estalagnato",
 	"item.betternether.stalagnate_bowl": "Tijela de estalagnato",
@@ -233,14 +233,14 @@
 	"block.betternether.geyser": "Gêiser",
 	
 	"item.betternether.cincinnasite_shovel": "Pá de cincinnasita",
-	"item.betternether.cincinnasite_shovel_diamond": "Pá de cincinnasita com diamante",
+	"item.betternether.cincinnasite_shovel_diamond": "Pá de cincinnasita e diamante",
 	
 	"item.betternether.cincinnasite_helmet": "Capacete de cincinnasita",
 	"item.betternether.cincinnasite_chestplate": "Peitoral de cincinnasita",
 	"item.betternether.cincinnasite_leggings": "Calças de cincinnasita",
 	"item.betternether.cincinnasite_boots": "Botas de cincinnasita",
 	"item.betternether.cincinnasite_sword": "Espada de cincinnasita",
-	"item.betternether.cincinnasite_sword_diamond": "Espada de cincinnasita com diamante",
+	"item.betternether.cincinnasite_sword_diamond": "Espada de cincinnasita e diamante",
 	
 	"item.betternether.spawn_egg_firefly": "Ovo gerador de vagalume",
 	"item.betternether.cincinnasite_ingot": "Barra de cincinnasita",
@@ -379,27 +379,27 @@
 	"biome.betternether.old_swampland": "Pântano do Nether antigo",
 	"biome.betternether.flooded_deltas": "Deltas de basalto inundadas",
 	
-	"block.betternether.mushroom_fir": "Cogumelo-abeto gigante",
-	"block.betternether.mushroom_fir_sapling": "Cogumelo-abeto",
-	"block.betternether.mushroom_fir_stem": "Talo de cogumelo-abeto",
-	"block.betternether.mushroom_fir_log": "Tora de cogumelo-abeto",
-	"block.betternether.mushroom_fir_wood": "Hifas de cogumelo-abeto",
-	"block.betternether.striped_log_mushroom_fir": "Tora de cogumelo-abeto descascada",
-	"block.betternether.striped_wood_mushroom_fir": "Hifas de cogumelo-abeto descascadas",
-	"block.betternether.mushroom_fir_planks": "Tábuas de cogumelo-abeto",
-	"block.betternether.mushroom_fir_stairs": "Escadas de cogumelo-abeto",
-	"block.betternether.mushroom_fir_slab": "Laje de cogumelo-abeto",
-	"block.betternether.mushroom_fir_fence": "Cerca de cogumelo-abeto",
-	"block.betternether.mushroom_fir_gate": "Portão de cogumelo-abeto",
-	"block.betternether.mushroom_fir_button": "Botão de cogumelo-abeto",
-	"block.betternether.mushroom_fir_plate": "Placa de pressão de cogumelo-abeto",
-	"block.betternether.mushroom_fir_trapdoor": "Alçapão de cogumelo-abeto",
-	"block.betternether.mushroom_fir_door": "Porta de cogumelo-abeto",
-	"block.betternether.mushroom_fir_ladder": "Escada de mão de cogumelo-abeto",
+	"block.betternether.mushroom_fir": "Aabetomelo gigante",
+	"block.betternether.mushroom_fir_sapling": "Abetomelo",
+	"block.betternether.mushroom_fir_stem": "Talo de abetomelo",
+	"block.betternether.mushroom_fir_log": "Tora de abetomelo",
+	"block.betternether.mushroom_fir_wood": "Hifas de abetomelo",
+	"block.betternether.striped_log_mushroom_fir": "Tora de abetomelo descascada",
+	"block.betternether.striped_wood_mushroom_fir": "Hifas de abetomelo descascadas",
+	"block.betternether.mushroom_fir_planks": "Tábuas de abetomelo",
+	"block.betternether.mushroom_fir_stairs": "Escadas de abetomelo",
+	"block.betternether.mushroom_fir_slab": "Laje de abetomelo",
+	"block.betternether.mushroom_fir_fence": "Cerca de abetomelo",
+	"block.betternether.mushroom_fir_gate": "Portão de abetomelo",
+	"block.betternether.mushroom_fir_button": "Botão de abetomelo",
+	"block.betternether.mushroom_fir_plate": "Placa de pressão de abetomelo",
+	"block.betternether.mushroom_fir_trapdoor": "Alçapão de abetomelo",
+	"block.betternether.mushroom_fir_door": "Porta de abetomelo",
+	"block.betternether.mushroom_fir_ladder": "Escada de mão de abetomelo",
 	
-	"block.betternether.chair_mushroom_fir": "Cadeira de cogumelo-abeto",
-	"block.betternether.taburet_mushroom_fir": "Banco de cogumelo-abeto",
-	"block.betternether.bar_stool_mushroom_fir": "Banqueta de cogumelo-abeto",
+	"block.betternether.chair_mushroom_fir": "Cadeira de abetomelo",
+	"block.betternether.taburet_mushroom_fir": "Banco de abetomelo",
+	"block.betternether.bar_stool_mushroom_fir": "Banqueta de abetomelo",
 	
 	"block.betternether.obsidian_bricks": "Tijolos de obsidiana",
 	"block.betternether.obsidian_bricks_stairs": "Escadas de tijolos de obsidiana",
@@ -441,14 +441,14 @@
 	"block.betternether.bar_stool_dark_oak": "Banqueta de carvalho escuro",
 	
 	"item.betternether.cincinnasite_hammer": "Martelo de cincinnasita",
-	"item.betternether.cincinnasite_hammer_diamond": "Martelo de cincinnasita com diamante",
+	"item.betternether.cincinnasite_hammer_diamond": "Martelo de cincinnasita e diamante",
 	
 	"block.betternether.nether_brewing_stand": "Suporte de poções do Nether",
 	
 	"betternether.flat_nether": "Nether plano",
 	
 	"item.betternether.spawn_egg_hydrogen_jellyfish": "Ovo gerador de medusa-hidrogênio",
-	"block.betternether.brick_pot": "Vaso do Nether",
+	"block.betternether.brick_pot": "Vaso de tijolo do Nether",
 	
 	"block.betternether.rubeus_stripped_log": "Tronco de rúbeus descascado",
 	"block.betternether.rubeus_stripped_bark": "Madeira de rúbeus descascada",
@@ -549,7 +549,7 @@
 	"block.betternether.crafting_table_wart": "Bancada de fungo do Nether",
 	"block.betternether.rubeus_crafting_table": "Bancada de rúbeus",
 	"block.betternether.crafting_table_mushroom": "Bancada de cogumelo",
-	"block.betternether.crafting_table_mushroom_fir": "Bancada de cogumelo-abeto",
+	"block.betternether.crafting_table_mushroom_fir": "Bancada de abetomelo",
 	
 	"block.betternether.stalagnate_chest": "Baú de estalagnato",
 	"block.betternether.chest_reed": "Baú de junco do Nether",
@@ -557,14 +557,14 @@
 	"block.betternether.chest_wart": "Baú de fungo do Nether",
 	"block.betternether.rubeus_chest": "Baú de rúbeus",
 	"block.betternether.chest_mushroom": "Baú de cogumelo",
-	"block.betternether.chest_mushroom_fir": "Baú de cogumelo-abeto",
+	"block.betternether.chest_mushroom_fir": "Baú de abetomelo",
 	
 	"block.betternether.chest_crimson": "Baú carmesim",
 	"block.betternether.chest_warped": "Baú distorcido",
 	
 	"block.betternether.jungle_moss": "Musgo da selva do Nether",
 	
-	"block.betternether.feather_fern": "Samambaia-pena",*
+	"block.betternether.feather_fern": "Plumambaia",
 	
 	"block.betternether.stalagnate_sign": "Placa de estalagnato",
 	"block.betternether.sign_reed": "Placa de junco do Nether",
@@ -612,21 +612,21 @@
 	"block.betternether.cincinnasite_chain": "Corrente de cincinnasita",
 	"block.betternether.nether_lapis_ore": "Minério de lápis-lazúli do Nether",
 	"item.betternether.lapis_pile": "Pilha de lápis-lazúli",
-	"item.betternether.cincinnasite_excavator": "Cincinnasite Excavator",
-	"item.betternether.cincinnasite_excavator_diamond": "Cincinnasite-Diamond Excavator",
-	"item.betternether.nether_ruby_excavator": "Ruby Excavator",
+	"item.betternether.cincinnasite_excavator": "Escavadora de cincinnasita",
+	"item.betternether.cincinnasite_excavator_diamond": "Escavadora de cincinnasita e diamante",
+	"item.betternether.nether_ruby_excavator": "Escavadora de rubi",
 	
 	"block.betternether.sepia_mushroom_grass": "Cogugrama sulfúrica",
 	"block.betternether.sepia_bone_grass": "Grama óssea sulfúrica",
 	"block.betternether.golden_lumabus_seed": "Semente de lumábus-dourado",
 	"block.betternether.golden_lumabus_vine": "Trepadeira de lumábus-dourado",
 	
-	"block.betternether.cincinnasite_fire_bowl": "Cincinnasite Fire Bowl",
-	"block.betternether.bricks_fire_bowl": "Nether Brick Fire Bowl",
-	"block.betternether.netherite_fire_bowl": "Netherite Fire Bowl",
-	"block.betternether.cincinnasite_fire_bowl_soul": "Cincinnasite Soul Fire Bowl",
-	"block.betternether.bricks_fire_bowl_soul": "Nether Brick Soul Fire Bowl",
-	"block.betternether.netherite_fire_bowl_soul": "Netherite Soul Fire Bowl",
+	"block.betternether.cincinnasite_fire_bowl": "Lareira de cincinnasita",
+	"block.betternether.bricks_fire_bowl": "Lareira de tijolo do Nether",
+	"block.betternether.netherite_fire_bowl": "Lareira de netherita",
+	"block.betternether.cincinnasite_fire_bowl_soul": "Lareira das almas de cincinnasita",
+	"block.betternether.bricks_fire_bowl_soul": "Lareira das almas de tijolo do Nether",
+	"block.betternether.netherite_fire_bowl_soul": "Lareira das almas de netherita",
 	
 	"block.betternether.swampland_grass": "Grama do pântano do Nether",
 	"block.betternether.basalt_slab": "Laje de basalto",
