--- a/src/main/resources/assets/betternether/lang/pt_br.json
+++ b/src/main/resources/assets/betternether/lang/pt_br.json
@@ -18,15 +18,15 @@
 
 	"item.betternether.cincinnasite": "Cincinnasita bruta",
 	"item.betternether.cincinnasite_axe": "Machado de cincinnasita",
-	"item.betternether.cincinnasite_axe_diamond": "Machado de cincinnasita e diamante",
+	"item.betternether.cincinnasite_axe_diamond": "Machado de cincinnasita com diamante",
 	"item.betternether.cincinnasite_pickaxe": "Picareta de cincinnasita",
-	"item.betternether.cincinnasite_pickaxe_diamond": "Picareta de cincinnasita e diamante",
+	"item.betternether.cincinnasite_pickaxe_diamond": "Picareta de cincinnasita com diamante",
 
 	"block.betternether.stalagnate_bowl": "Tijela de estalagnato",
 	"item.betternether.stalagnate_bowl": "Tijela de estalagnato",
 	"item.betternether.stalagnate_bowl_apple": "Tijela com maçã-negra",
 	"item.betternether.stalagnate_bowl_mushroom": "Tijela com ensopado de cogumelos",
-	"item.betternether.stalagnate_bowl_wart": "Tijela com sopa de fungo do Nether",
+	"item.betternether.stalagnate_bowl_wart": "Tijela com sopa de fungos do Nether",
 
 	"itemGroup.betternether.items": "Better Nether",
 
@@ -38,7 +38,7 @@
 	"item.betternether.agave_medicine": "Remédio de infragave",
 	"item.betternether.herbal_medicine": "Remédio de infra-ervas",
 
-	"block.betternether.barrel_cactus": "Infra-cacto barril",
+	"block.betternether.barrel_cactus": "Cacto barril do Nether",
 
 	"block.betternether.black_apple_seed": "Semente de maçã-negra",
 	"block.betternether.black_bush": "Arbusto-negro",
@@ -58,18 +58,18 @@
 	"block.betternether.bone_reed_door": "Porta óssea de junco do Nether",
 	"block.betternether.bone_slab": "Laje óssea",
 	"block.betternether.bone_stairs": "Escadas ósseas",
-	"block.betternether.bone_tile": "Bloco ósseo cinzelado",
+	"block.betternether.bone_tile": "Bloco ósseo lapidado",
 	"block.betternether.bone_wall": "Muro ósseo",
 	
 	"block.betternether.chest_of_drawers": "Gaveteiro",
 
 	"block.betternether.cincinnasite_bars": "Grades de cincinnasita",
 	"block.betternether.cincinnasite_block": "Bloco de cincinnasita bruta",
-	"block.betternether.cincinnasite_brick_plate": "Cincinnasite Brick Plate",*
+	"block.betternether.cincinnasite_brick_plate": "Chapeamento de tijolos de cincinnasita",
 	"block.betternether.cincinnasite_bricks": "Tijolos de cincinnasita",
 	"block.betternether.cincinnasite_bricks_pillar": "Pilar de tijolos de cincinnasita",
 	"block.betternether.cincinnasite_button": "Botão de cincinnasita",
-	"block.betternether.cincinnasite_carved": "Cincinnasita talhada",
+	"block.betternether.cincinnasite_carved": "Bloco de cincinnasita talhado",
 	"block.betternether.cincinnasite_forge": "Forja de cincinnasita",
 	"block.betternether.cincinnasite_forged": "Bloco de cincinnasita",
 	"block.betternether.cincinnasite_frame": "Emoldurado de cincinnasita",
@@ -81,7 +81,7 @@
 	"block.betternether.cincinnasite_pot": "Vaso de cincinnasita",
 	"block.betternether.cincinnasite_slab": "Laje de cincinnasita",
 	"block.betternether.cincinnasite_stairs": "Escadas de cincinnasita",
-	"block.betternether.cincinnasite_tile_large": "Cincinnasita cinzelada",
+	"block.betternether.cincinnasite_tile_large": "Bloco de cincinnasita lapidado",
 	"block.betternether.cincinnasite_tile_small": "Ladrilhos de cincinnasita",
 	"block.betternether.cincinnasite_wall": "Muro de cincinnasita",
 
@@ -100,11 +100,11 @@
 
 	"block.betternether.magma_flower": "Semente de flor-de-magma",
 
-	"block.betternether.nether_brick_tile_large": "Bloco de tijolo do Nether cinzelado",
+	"block.betternether.nether_brick_tile_large": "Bloco de tijolo do Nether lapidado",
 	"block.betternether.nether_brick_tile_slab": "Laje de ladrilhos do Nether",
 	"block.betternether.nether_brick_tile_small": "Ladrilhos do Nether",
 	"block.betternether.nether_brick_tile_stairs": "Escadas de ladrilhos do Nether",
-	"block.betternether.nether_brick_wall": "Muro de tijolo do Nether cinzelado",
+	"block.betternether.nether_brick_wall": "Muro de tijolo do Nether lapidado",
 	"block.betternether.nether_cactus": "Cacto do Nether",
 	"block.betternether.nether_grass": "Grama do Nether",
 	"block.betternether.nether_mycelium": "Micélio do Nether",
@@ -112,9 +112,9 @@
 	"block.betternether.netherrack_furnace": "Fornalha de netherrack",
 	"block.betternether.blackstone_furnace": "Fornalha de pedra-negra",
 	"block.betternether.basalt_furnace": "Fornalha de basalto",
-	"block.betternether.netherrack_moss": "Musgo do Nether",
+	"block.betternether.netherrack_moss": "Musgo de netherrack",
 
-	"block.betternether.orange_mushroom": "Cogumelo laranja",
+	"block.betternether.orange_mushroom": "Cogumelo-laranja",
 
 	"block.betternether.pig_statue_respawner": "Estátua de renascimento",
 
@@ -187,7 +187,7 @@
 	"block.betternether.stalagnate_door": "Porta de estalagnato",
 	"block.betternether.stalagnate_trapdoor": "Alçapão de estalagnato",
 	"block.betternether.stalagnate_seed": "Muda de estalagnato",
-	"block.betternether.wart_seed": "Muda de fungo do Nether",
+	"block.betternether.wart_seed": "Primórdia de fungo do Nether",
 	
 	"block.betternether.eye_vine": "Trepadeira de globo ocular",
 	"block.betternether.black_apple": "Arbusto de maçã-negra",
@@ -203,7 +203,7 @@
 	"block.betternether.willow_bark": "Madeira de infra-salgueiro",
 	"block.betternether.willow_sapling": "Muda de infra-salgueiro",
 	
-	"block.betternether.swamp_grass": "Erva do pântano do Nether",
+	"block.betternether.swamp_grass": "Gramínea do pântano do Nether",
 	
 	"block.betternether.willow_planks": "Tábuas de infra-salgueiro",
 	"block.betternether.willow_stairs": "Escadas de infra-salgueiro",
@@ -225,7 +225,7 @@
 	"block.betternether.wart_trapdoor": "Alçapão de fungo do Nether",
 	"block.betternether.wart_door": "Porta de fungo do Nether",
 	
-	"block.betternether.black_vine": "Trepadeira-negra",
+	"block.betternether.black_vine": "Trepadeira negra",
 	"block.betternether.veined_sand": "Areia das almas venosa",
 	"block.betternether.soul_vein": "Veia das almas",
 	"block.betternether.blooming_vine": "Trepadeira florescente",
@@ -233,7 +233,7 @@
 	"block.betternether.geyser": "Gêiser",
 	
 	"item.betternether.cincinnasite_shovel": "Pá de cincinnasita",
-	"item.betternether.cincinnasite_shovel_diamond": "Pá de cincinnasita e diamante",
+	"item.betternether.cincinnasite_shovel_diamond": "Pá de cincinnasita com diamante",
 	
 	"item.betternether.cincinnasite_helmet": "Capacete de cincinnasita",
 	"item.betternether.cincinnasite_chestplate": "Peitoral de cincinnasita",
@@ -339,16 +339,16 @@
 	"block.betternether.chair_wart": "Cadeira de fungo do Nether",
 	"block.betternether.chair_cincinnasite": "Cadeira de cincinnasita",
 	
-	"block.betternether.stalagnate_stripped_log": "Tora de estalagnato",
+	"block.betternether.stalagnate_stripped_log": "Tora de estalagnato descascada",
 	"block.betternether.willow_stripped_log": "Tronco de infra-salgueiro descascado",
 	"block.betternether.striped_log_wart": "Caule de fungo do Nether descascado",
 	
-	"block.betternether.stalagnate_stripped_bark": "Madeira de estalagnato",
+	"block.betternether.stalagnate_stripped_bark": "Madeira de estalagnato descascada",
 	"block.betternether.willow_stripped_bark": "Madeira de infra-salgueiro descascada",
 	"block.betternether.striped_bark_wart": "Hifas de fungo do Nether descascadas",
 	
 	"block.betternether.giant_mold": "Mofo gigante",
-	"block.betternether.giant_mold_sapling": "Muda de mofo gigante",
+	"block.betternether.giant_mold_sapling": "Primórdia de mofo gigante",
 	
 	"block.betternether.bar_stool_reeds": "Banqueta de junco do Nether",
 	"block.betternether.stalagnate_bar_stool": "Banqueta de estalagnato",
@@ -379,8 +379,8 @@
 	"biome.betternether.old_swampland": "Pântano do Nether antigo",
 	"biome.betternether.flooded_deltas": "Deltas de basalto inundadas",
 	
-	"block.betternether.mushroom_fir": "Aabetomelo gigante",
-	"block.betternether.mushroom_fir_sapling": "Abetomelo",
+	"block.betternether.mushroom_fir": "Abetomelo gigante",
+	"block.betternether.mushroom_fir_sapling": "Primórdia de abetomelo",
 	"block.betternether.mushroom_fir_stem": "Talo de abetomelo",
 	"block.betternether.mushroom_fir_log": "Tora de abetomelo",
 	"block.betternether.mushroom_fir_wood": "Hifas de abetomelo",
@@ -404,7 +404,7 @@
 	"block.betternether.obsidian_bricks": "Tijolos de obsidiana",
 	"block.betternether.obsidian_bricks_stairs": "Escadas de tijolos de obsidiana",
 	"block.betternether.obsidian_bricks_slab": "Laje de tijolos de obsidiana",
-	"block.betternether.obsidian_tile": "Obsidiana polida",
+	"block.betternether.obsidian_tile": "Obsidiana lapidada",
 	"block.betternether.obsidian_tile_small": "Ladrilhos de obsidiana",
 	"block.betternether.obsidian_tile_stairs": "Escadas de ladrilhos de obsidiana",
 	"block.betternether.obsidian_tile_slab": "Laje de ladrilhos de obsidiana",
@@ -414,7 +414,7 @@
 	"block.betternether.blue_obsidian_bricks": "Tijolos de obsidiana azul",
 	"block.betternether.blue_obsidian_bricks_stairs": "Escadas de tijolos de obsidiana azul",
 	"block.betternether.blue_obsidian_bricks_slab": "Laje de tijolos de obsidiana azul",
-	"block.betternether.blue_obsidian_tile": "Obsidiana azul polida",
+	"block.betternether.blue_obsidian_tile": "Obsidiana azul lapidada",
 	"block.betternether.blue_obsidian_tile_small": "Ladrilhos de obsidiana azul",
 	"block.betternether.blue_obsidian_tile_stairs": "Escadas de ladrilhos de obsidiana azul",
 	"block.betternether.blue_obsidian_tile_slab": "Laje de ladrilhos de obsidiana azul",
@@ -510,7 +510,7 @@
 	"block.betternether.soul_sandstone_cut_slab": "Laje de arenito das almas lapidado",
 	"block.betternether.soul_sandstone_smooth_slab": "Laje de arenito das almas liso",
 	
-	"block.betternether.soul_sandstone_wall": "Muro de arenito das almas",
+	"block.betternether.soul_sandstone_wall": "Muro de arenito das almas lapidado",
 	
 	"block.betternether.basalt_bricks": "Tijolos de basalto",
 	"block.betternether.basalt_bricks_stairs": "Escadas de tijolos de basalto",
@@ -572,7 +572,7 @@
 	"block.betternether.sign_wart": "Placa de fungo do Nether",
 	"block.betternether.rubeus_sign": "Placa de rúbeus",
 	"block.betternether.sign_mushroom": "Placa de cogumelo",
-	"block.betternether.sign_mushroom_fir": "Placa de cogumelo-abeto",
+	"block.betternether.sign_mushroom_fir": "Placa de abetomelo",
 	
 	"block.betternether.stalagnate_barrel": "Barril de estalagnato",
 	"block.betternether.barrel_reed": "Barril de junco do Nether",
@@ -580,7 +580,7 @@
 	"block.betternether.barrel_wart": "Barril de fungo do Nether",
 	"block.betternether.rubeus_barrel": "Barril de rúbeus",
 	"block.betternether.barrel_mushroom": "Barril de cogumelo",
-	"block.betternether.barrel_mushroom_fir": "Barril de cogumelo-abeto",
+	"block.betternether.barrel_mushroom_fir": "Barril de abetomelo",
 	
 	"block.betternether.barrel_crimson": "Barril carmesim",
 	"block.betternether.barrel_warped": "Barril distorcido",
